# FunnyAnimateChess

./: .gitignore  CMakeLists.txt  README.md
Engine/: CMakeLists.txt  Utility.h  main.cpp
Engine/ChessBoard/: ChessBoard.h
Engine/ChessFigure/: ChessFigure.h
Engine/ChessSquare/: ChessSquare.h
Engine/Game/: Game.cpp  Game.h
